--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-490.8KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-165.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.24MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-3.10MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: 159.223.54.93, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.54.93}}
-  - {name: 🇯🇵 日本-5.30MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-966.0KB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 未知国家-5.12MB/s(Youtube:不良林), server: node.free.usa.naiun.pw, port: 80, type: vmess, uuid: 66919abe-f694-42d8-b35f-af0dc61f68e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: node.free.usa.naiun.pw}}
+  - {name: 🇺🇸 美国-5.37MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.25MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇭🇰 香港-325.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-379.3KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-489.4KB/s(Youtube:不良林), server: 36.134.53.194, port: 26012, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.30MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.90MB/s(Youtube:不良林), server: 43.129.30.122, port: 12359, type: vmess, uuid: f78921c4-5a97-47ed-db4c-e88b799e6581, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-490.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-966.0KB/s(Youtube:不良林)
+      - 未知国家-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
       - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-379.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-490.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-966.0KB/s(Youtube:不良林)
+      - 未知国家-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
       - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-379.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-490.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-966.0KB/s(Youtube:不良林)
+      - 未知国家-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
       - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-379.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-966.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-379.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-490.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-966.0KB/s(Youtube:不良林)
+      - 未知国家-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
       - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-379.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-490.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-966.0KB/s(Youtube:不良林)
+      - 未知国家-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
       - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-379.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-490.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-966.0KB/s(Youtube:不良林)
+      - 未知国家-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
       - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-379.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-490.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.24MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-966.0KB/s(Youtube:不良林)
+      - 未知国家-5.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
       - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-379.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
