--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 未知国家-5.12MB/s(Youtube:不良林), server: node.free.usa.naiun.pw, port: 80, type: vmess, uuid: 66919abe-f694-42d8-b35f-af0dc61f68e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: node.free.usa.naiun.pw}}
-  - {name: 🇺🇸 美国-5.37MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.25MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-325.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.16MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.35MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-489.4KB/s(Youtube:不良林), server: 36.134.53.194, port: 26012, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.30MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.90MB/s(Youtube:不良林), server: 43.129.30.122, port: 12359, type: vmess, uuid: f78921c4-5a97-47ed-db4c-e88b799e6581, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-4.68MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-344.3KB/s(Youtube:不良林), server: 194.124.35.42, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-550.1KB/s(Youtube:不良林), server: 194.124.35.42, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-496.7KB/s(Youtube:不良林), server: 194.124.35.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-4.79MB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
+  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-496.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-496.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-496.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-496.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-496.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-496.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-5.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
-      - 🇭🇰 香港-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.68MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.90MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-344.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-550.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-496.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
