--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.37MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 未知国家-2.14MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇮🇹 意大利-1.56MB/s(Youtube:不良林), server: id-lb.sshkit.org, port: 443, type: vmess, uuid: 6fea1649-425b-4092-bf53-29792152c925, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /sshkit/hajjana/62bc48cd97ee1/, ws-headers: {Host: id-lb.sshkit.org}}
-  - {name: 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇦 加拿大-2.14MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-759.3KB/s(Youtube:不良林), server: 194.124.35.42, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇸🇬 新加坡-3.65MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 未知国家-3.98MB/s(Youtube:不良林), server: node.free.usa.naiun.pw, port: 80, type: vmess, uuid: 66919abe-f694-42d8-b35f-af0dc61f68e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: node.free.usa.naiun.pw}}
   - {name: 🇸🇬 新加坡-795.4KB/s(Youtube:不良林), server: 194.124.35.42, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: 45.88.148.234, port: 38443, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.62MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 未知国家-2.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 未知国家-2.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 未知国家-2.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 未知国家-2.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 未知国家-2.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 未知国家-2.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
-      - 未知国家-2.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-759.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
+      - 未知国家-3.98MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-795.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
